--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 </head>
 <body>
     <div class="container">
-        <article>
-            <header>
-                <h1>Website Donations for Nonprofits</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, ipsa! Ducimus expedita nemo fugiat tempore, eum, ipsum illum earum omnis enim doloremque saepe ratione maxime libero atque sit eos ea.</p>
-                <a href="http://">Donate  Now</a>
+        <article id="article-one">
+            <header class="header-box">
+                <h1 class="header-title">Website Donations for Nonprofits</h1>
+                <p class="header-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, ipsa! Ducimus expedita nemo fugiat tempore, eum, ipsum illum earum omnis enim doloremque</p>
+                <a href="http://" id="donation-btn">Donate  Now</a>
             </header>
         </article>
-        <article>
+        <article id="article-two">
             <h2> Donate today</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem quod quaerat consequuntur perferendis nobis id sit quisquam repudiandae accusamus minus nihil blanditiis quibusdam suscipit quo, consequatur dolor ad architecto possimus.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem quod quaerat consequuntur perferendis nobis id sit quisquam repudiandae accusamus minus nihil blanditiis quibusdam suscipit</p>
     
-            <div>
-                <div>100tk</div>
-                <div>200tk</div>
-                <div>500tk</div>
-                <div>1000tk</div>
-                <div>5000tk</div>
+            <div class="money-amount">
+                <div class="amount">100tk</div>
+                <div class="amount">200tk</div>
+                <div class="amount">500tk</div>
+                <div class="amount">1000tk</div>
+                <div class="amount">5000tk</div>
             </div>
             <input type="number" name="quantity" id="quantity" placeholder="other Amount">
             <a href="">Donate now</a>
