--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
                 <div class="amount">1000tk</div>
                 <div class="amount">5000tk</div>
             </div>
-            <input type="number" name="quantity" id="quantity" placeholder="other Amount">
-            <a href="" target="_blank" >Donate now</a>
+           <div>
+            <input type="number" name="quantity" id="quantity" placeholder="Other Amount(taka)">
+            </div>
+            <div><a href="" target="_blank" id="donate" >Donate now</a></div>
+            
+
         </article>
 
         <div class="donation-plan">
@@ -64,32 +68,39 @@
 
         <section class="destibution-box">
             <div class="destribution">
-                <div>
+                <div class="half-width">
                     <h2>Their live depends on your donation</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae at consequatur esse dolor alias unde nulla quam atque quibusdam! Unde a quae ratione debitis eveniet laborum quasi provident illum. Quia!</p>
-                    <a href="" class="bestibution-btn">How to contribute</a>
+                    <a href="" class="destibution-btn">How to contribute</a>
                 </div>
-                <div>
+                <div class="half-width">
                     <img src="images/donation0.jpg" alt="" class="destribuion-img">
                 </div>
             </div>
             <div class="destribution">
-                <div>
+                <div class="half-width">
                     <img src="images/donation6.jpg" alt=""class="destribuion-img">
                 </div>
-                <div>
+                <div class="half-width">
                     <h2>They need us to survive</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut perferendis hic possimus optio autem vitae, deserunt quibusdam aliquid, aut libero, laborum maiores dolores vero! Veniam placeat rerum commodi. Mollitia, quisquam.</p>
                     <a href="" class="destibution-btn">How to contribute</a>
                 </div>
-               
+            </div>
+        </section>
+
+
+        <section class="updates">
+
+            <h1>GET my updates</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ut harum</p>
+            <div  class="email-box">
+                <input type="email" name="email" id="email">
+                <a href="http://" target="_blank"id="subscriber">Subscriber</a> 
 
             </div>
 
         </section>
-
-
-
 
 
 
