--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@
                 </div>
             </div>
         </section>
+        <section class="bounus-box">
+            <h1 class="bonus-title">
+                Our Corporate Partners
+            </h1>
+            <p class="bonus-text">We've made it possible for more than 490 companies to support local causes around the world. We help companies expand their philanthropic footprint with global nonprofit vetting, grantmaking, charitable gift cards, and digital campaigns to power cause marketing, disaster response, and employee giving.</p>
+            <div class="bonus-images">
+                <div><img src="icons/d-logo.jpg" class="bonus-icons" alt=""></div>
+                <div><img src="icons/green_world.jpg" class="bonus-icons" alt=""></div>
+                <div><img src="icons/—Pngtree—exquisite color personalized logo design_26703.png" class="bonus-icons" alt=""></div>
+                <div><img src="icons/download.png" class="bonus-icons" alt=""></div>
+                <div><img src="icons/images.png" class="bonus-icons" alt=""></div>
+                
+            </div>
+        </section>
 
 
         <section class="updates">
@@ -97,7 +111,6 @@
             <div  class="email-box">
                 <input type="email" name="email" id="email">
                 <a href="http://" target="_blank"id="subscriber">Subscriber</a> 
-
             </div>
 
         </section>
